# analysis

./: .gitignore  00-prepare-gt.ipynb  00-results-plots-tables.ipynb  01-list-valid-submissions.ipynb  10-results-plots-tables.ipynb  20-qualitative-results-raw-predictions.ipynb  30-qualitative-results-evaluation.ipynb  Pipfile  README.md  pyproject.toml  valid_submissions.csv
data/01-tables-and-plots/: task_1_subset_ign.tex  task_1_subset_rumsey.tex  task_2_subset_ign.tex  task_2_subset_rumsey.tex  task_3_subset_ign.tex  task_3_subset_rumsey.tex  task_4_subset_ign.tex  task_4_subset_rumsey.tex
data/10-tables-and-plots/: task_1_subset_ign.tex  task_1_subset_rumsey.tex  task_1_subset_twh.tex  task_2_subset_ign.tex  task_2_subset_rumsey.tex  task_3_subset_ign.tex  task_3_subset_rumsey.tex  task_3_subset_twh.tex  task_4_subset_ign.tex  task_4_subset_rumsey.tex
data/10-tables-and-plots_2024/: task_1_subset_ign.tex  task_2_subset_ign.tex  task_3_subset_rumsey.tex
data/20-raw-predictions/: .gitignore  README.md
data/20-raw-predictions_2024/: README.md
icdar24_maptext_analysis/: eval.py  loaders.py  paths.py  submissions_metadata.py
icdar_maptext_analysis/: eval_requirements.txt  loaders.py  paths.py  submissions_metadata.py
maptext24-analysis/: paths.py
