[project]
name = "maptext-analysis"
version = "0.1.0"
description = "Collection of tools to produce tables, graphs and figures for the report, from submissions, evaluations and dataset for the ICDAR 2025 Competition on Historical Map Text Detection, Recognition, and Linking."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "jinja2>=3.1.6",
    "matplotlib>=3.10.1",
    "numpy>=2.2.5",
    "pandas>=2.2.3",
    "pillow>=11.2.1",
    "pyeditdistance>=1.0.1",
    "scipy>=1.15.2",
    "shapely>=2.1.0",
]

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
]
